@@ -16,7 +16,12 @@ URL:		http://drumkv1.sourceforge.net
 
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-buildroot
 
-BuildRequires:	libqt4-devel >= 4.4
+#BuildRequires:	libqt4-devel >= 4.4
+%if %{defined fedora}
+BuildRequires:	qt5-qtbase-devel >= 5.1, qt5-linguist
+%else
+BuildRequires:	libqt5-qtbase-devel >= 5.1, libqt5-linguist
+%endif
 BuildRequires:	libjack-devel >= 0.109.2
 BuildRequires:	libsndfile-devel >= 1.0.11
 BuildRequires:	alsa-devel
